@@ -1,3 +1,10 @@
+2021-03-revision-1
+- Uses libbib 1.3.1 to do more of the work
+- Should fix problems with some LC Call -> Subject translations
+- Better discriminating between local call numbers and lc calls
+- utils in dependencies now part of libbib
+- now writes out gzipped data files instead (for big files and intermediate files)
+- writes targets in one place
 
 2021-03
 - adds LC Subject Classification and subclassification directly in data target
